--- a/css/projet.css
+++ b/css/projet.css
@@ -21,12 +21,13 @@
   }
   .menu-4 a {
     padding: 0.3em 0;
-    color: #212121;
+    color: #747474;
     position: relative;
     display: inline-block;
     letter-spacing: 1px;
     margin: 0;
     text-decoration: none;
+    font-family: Roboto,Arial,sans-serif;
   }
   .menu-4 a:before,
   .menu-4 a:after {
@@ -48,7 +49,7 @@
     bottom: 100%;
     left: 0;
     content: attr(data-hover);
-    color: #212121;
+    color: #e67e22;
     white-space: nowrap;
   }
   .menu-4 li:hover a,
@@ -56,8 +57,9 @@
     transform: translateY(100%);
   }
 .navbar_logo{
-    margin-right: 600px;
+    margin-right: 700px;
     margin-top: -10px;
+    width: 2%;
 }
 .WNBA{
     font-weight: 500;
@@ -67,5 +69,6 @@
     color: #c47f29;
   
 }
+.style-4{    margin-right: 50px;}
 
 
