--- a/css/projet.css
+++ b/css/projet.css
@@ -226,11 +226,13 @@
   font: italic 1.2em "Fira Sans", serif;
   border-collapse: collapse;
   width: 40%;
-  margin-left: 5%;
+  
+
+ 
 }
 
-#STATStd, #STATS th {
-  border-bottom: 1px solid #ddd;
+#STATS td, #STATS th {
+  border-bottom: 1px solid #747474;
   padding: 8px;
 }
 
@@ -244,4 +246,30 @@
   text-align: left;
   background-color: #e67e22;
   color: white;
+}
+.stats1{
+  margin-left: 5%;
+}
+.stats2{
+  margin-top: -17.5%;
+  margin-left: 50%;
+  margin-right: -60%;
+}
+.stats3{
+  margin-top: 5%;
+  margin-left: 5%;
+}
+.stats4{
+  margin-left: 50%;
+  margin-right: -60%;
+  margin-top: -17.5%;
+}
+.stats5{
+  margin-top: 5%;
+  margin-left: 5%;
+}
+.stats6{
+  margin-left: 50%;
+  margin-right: -60%;
+  margin-top: -17.5%;
 }
