--- a/css/projet.css
+++ b/css/projet.css
@@ -226,9 +226,7 @@
   font: italic 1.2em "Fira Sans", serif;
   border-collapse: collapse;
   width: 40%;
-  
-
- 
+  margin-top: 10%;
 }
 
 #STATS td, #STATS th {
@@ -251,7 +249,7 @@
   margin-left: 5%;
 }
 .stats2{
-  margin-top: -17.5%;
+  margin-top: -29%;
   margin-left: 50%;
   margin-right: -60%;
 }
@@ -262,7 +260,7 @@
 .stats4{
   margin-left: 50%;
   margin-right: -60%;
-  margin-top: -17.5%;
+  margin-top: -29%;
 }
 .stats5{
   margin-top: 5%;
@@ -271,5 +269,174 @@
 .stats6{
   margin-left: 50%;
   margin-right: -60%;
-  margin-top: -17.5%;
+  margin-top: -29%;
+}
+
+
+.tour-row {
+  border-bottom: 1px solid black;
+  padding-bottom: 1em;
+  margin-bottom: 1em;
+}
+
+.tour-row:last-child {
+  border: none;
+}
+
+.tour-item {
+  display: inline-block;
+  padding-right: .5em;
+}
+
+.tour-date {
+  color: #555;
+  width: 11%;
+  font-weight: bold;
+}
+
+.tour-city {
+  width: 24%;
+}
+
+.tour-arena {
+  width: 42%;
+}
+
+.tour-btn {
+  max-width: 19%;
+}
+
+.shop-item {
+  margin: 30px;
+  
+}
+
+
+
+
+.shop-item-image {
+  height: 250px;
+}
+
+.shop-item-details {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+}
+
+.shop-item-price {
+  flex-grow: 1;
+  color: #333;
+  font-size: 15px;
+}
+
+.shop-items {
+  margin-top: 5%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.shop-items2{
+  margin-top:10%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.cart-header {
+  font-weight: bold;
+  font-size: 1.25em;
+  color: #333;
+}
+
+.cart-column {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #e7b271;
+  margin-right: 1.5em;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
+.cart-row {
+  display: flex;
+}
+
+
+.btn {
+  text-align: center;
+  vertical-align: middle;
+  padding: .67em .67em;
+  cursor: pointer;
+}
+
+.btn-header {
+  margin: .5em 15% 2em 15%;
+  color: white;
+  border: 2px solid #2D9CDB;
+  background-color: rgba(255, 255, 255, .1);
+  border-radius: 0;
+  font-size: 1.5em;
+  font-weight: lighter;
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
+.btn-header:hover {
+  background-color: rgba(255, 255, 255, .3);
+}
+
+.btn-play {
+  display: block;
+  margin: 0 auto;
+  color: #2D9CDB;
+  font-size: 4em;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  padding: 0;
+  text-align: center;
+}
+
+.btn-primary {
+  color: white;
+  background-color: #c47f29;
+  border: none;
+  border-radius: .3em;
+  font-weight: bold;
+}
+
+.btn-primary:hover {
+  background-color: #e7b271;
+}
+.shop-item :hover{
+  cursor: pointer;
+}
+.img1{width:30%;}
+.img2{width:90%}
+
+
+#heart {
+  color: grey;  
+  font-size: 30px;
+}
+#heart1 {
+  color: grey;  
+  font-size: 30px;
+}#heart2 {
+  color: grey;  
+  font-size: 30px;
+}#heart3 {
+  color: grey;  
+  font-size: 30px;
+}
+
+#heart.red {
+  color: red;
+}#heart1.red {
+  color: red;
+}#heart2.red {
+  color: red;
+}#heart3.red {
+  color: red;
 }
